[package]
name = "create_lms_tests"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
# lms_hss = { path = "/home/eric/CLionProjects/lms_hss" }
lms_hss = { git = "https://github.com/ericeilertson/lms_hss.git" }
rand = "0.8.5"
